EDGOAIPMH-104 - Issues related to Cross tenant incremental harvest (#102)